<resources>
    <string name="app_name">Football Score Keeper</string>
    <string name="teamA">Ohio State</string>
    <string name="teamB">Michigan</string>
    <string name="td">Touchdown</string>
    <string name="extraPnt">Extra Point</string>
    <string name="fg">Field Goal</string>
    <string name="twoPnt">2 PT Conv</string>
    <string name="reset">Reset</string>
    <string name="imageViewDescription">OSU Logo</string>
</resources>
