<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/teamScoreColumns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamAName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/teamA"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="55sp" />

            <Button
                android:id="@+id/tdButtonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="updateScore"
                android:text="@string/td"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/extraPnTButtonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="updateScore"
                android:text="@string/extraPnt"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/fgButtonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="updateScore"
                android:text="@string/fg"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/twoPtConvButtonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="updateScore"
                android:text="@string/twoPnt"
                android:textAllCaps="true" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamBName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/teamB"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="55sp" />


            <Button
                android:id="@+id/tdButtonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="updateScore"
                android:text="@string/td"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/extraPnTButtonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="updateScore"
                android:text="@string/extraPnt"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/fgButtonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="updateScore"
                android:text="@string/fg"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/twoPtConvButtonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="updateScore"
                android:text="@string/twoPnt"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="55dp"
        android:onClick="updateScore"
        android:text="@string/reset"
        android:textAllCaps="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/teamScoreColumns"
        android:background="@drawable/buckeyes_logo"
        android:scaleType="center"
        android:contentDescription="@string/imageViewDescription" />

</RelativeLayout>